Fix COMMIT_MESSAGE — See https://github.com/atlinx/gre-text/commit/08f04c59bc356c22d47fb5c5fcf987b155fc7adf

--- a/.github/workflows/sync-from-text-repo.yml
+++ b/.github/workflows/sync-from-text-repo.yml
@@ -39,9 +39,9 @@ jobs:
         git status
         if [[ $(git status --porcelain) ]]; then
           echo "There are uncommitted changes in the repository, committing changes."
-          # git add .
-          # git commit -m "${{ env.COMMIT_MESSAGE }} — See https://github.com/${{ env.TEXT_REPO }}/commit/${{ github.sha }}"
-          # git push
+          git add .
+          git commit -m "${COMMIT_MESSAGE} — See https://github.com/${{ env.TEXT_REPO }}/commit/${{ github.sha }}"
+          git push
         else
           echo "The repository is clean; no uncommitted changes."
         fi
