Change gitignore — See https://github.com/atlinx/gre/commit/fb9d2d9cc2fcb8c6236381d80687935817aa1ddd

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # .gitignore for text repository
 
-# Ignore everything
-*
+# # Ignore everything
+# *
 
-# Allow gitignore, obsidian, and markdown files
-!.gitignore
-!.obsidian
+# # Allow gitignore, obsidian, and markdown files
+# !.gitignore
+# !.obsidian
 .obsidian/workspace*.json
-!**.md
+# !*.md
