--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-# .gitignore for text repository
+# .gitignore for main repository
 
-# Ignore everything
-/*
-
-# Allow gitignore, obsidian, and markdown files
-!.gitignore
-!.obsidian
 .obsidian/workspace*.json
-!**/*.md
